[package]
name = "wasm_bindgen_cfg"
version = "0.1.0"
authors = ["Brett Etter <brett.etter@staratlas.com>"]
description = "`wasm-bindgen` that can be `cfg`'d"
keywords = ["proc_macro", "procmacro"]
edition = "2021"
publish = ["star-atlas", "crates-io"]
repository = "https://github.com/staratlasmeta/wasm_bindgen_cfg"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }

